adds routes to api folder
