# routes/web.php
@@ -1,12 +1,1 @@
 <?php
-
-use App\Http\Controllers\Api\IngredientController;
-use App\Http\Controllers\Api\OrderController;
-use Illuminate\Support\Facades\Route;
-
-Route::get('/ingredients', [IngredientController::class, 'index']);
-Route::get('/ingredients/{id}', [IngredientController::class, 'show']);
-
-Route::get('/orders', [OrderController::class, 'index']);
-Route::get('/orders/{id}', [OrderController::class, 'show']);
-Route::post('/orders', [OrderController::class, 'store']);
